--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "firebase": "8.10.0",
     "interweave": "^13.0.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
+    "react-native-svg": "^12.3.0",
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
